# aoc

./: .gitignore  Cargo.toml
2022/day_01/src/: main.rs
2022/day_03/: Cargo.toml
2022/day_03/src/: main.rs
2022/day_04/: Cargo.toml
2022/day_04/src/: main.rs
2022/day_05/: Cargo.toml
2022/day_05/src/: main.rs
2022/day_06/: Cargo.toml
2022/day_06/src/: main.rs
2022/day_07/: Cargo.toml
2022/day_07/src/: main.rs
2022/day_1/: Cargo.toml
2022/day_2/: Cargo.toml
2022/day_2/src/: main.rs
aoc_util/: Cargo.toml
aoc_util/src/: lib.rs  raw_interface.rs
