[package]
name = "aoc_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
reqwest = { version = "0.11.13", features = ["blocking"] }
thiserror = "1.0.37"

[dev-dependencies]
anyhow = "1.0.66"
